Estructura basica HTML

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,19 @@
   <title>Analizador de texto</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
+  <header>
+    <h1>Analizador de texto</h1>
+  </header>
+  <ul>
+    <li>Palabras</li>
+    <li>Caracteres</li>
+  </ul>
+  <textarea></textarea>
+  <button>]Limpiar metricas</button>
+  <footer>
+    <p>Sandy Morales</p>
+  </footer>
   <script src="index.js" type="module"></script>
 </body>
 </html>
