--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Analizador de texto</h1>
+    <h1>Analizador de textohola</h1>
   </header>
   <ul>
     <li>Palabras</li>
