Archivo HTML y estilos

--- a/src/index.html
+++ b/src/index.html
@@ -3,19 +3,32 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Analizador de texto</title>
+  <title>ANALIZADOR DE TEXTOo</title>
   <link rel="stylesheet" href="style.css" />
-</head>
+</head> 
 <body>
   <header>
-    <h1>Analizador de textohola</h1>
+    <h1>Analizador de texto</h1>
   </header>
-  <ul>
-    <li>Palabras</li>
-    <li>Caracteres</li>
-  </ul>
-  <textarea></textarea>
-  <button>]Limpiar metricas</button>
+  <main>
+    <ul>
+      <li class="metrica">Palabras:
+      </li>
+      <li class="metrica">Caracteres:
+      </li>
+     <li class="metrica">Caracteres sin espacios: 
+      </li>
+      <li class="metrica">Números:
+      </li>
+      <li class="metrica">Suma Números:
+      </li>
+      <li class="metrica">Longitud media:
+      </li>
+    </ul>
+    <textarea name="user-input"></textarea>
+    <button id="reset-button">Limpiar metricas</button>
+  </main>
+  
   <footer>
     <p>Sandy Morales</p>
   </footer>
