Tres primeras metricas listas

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>ANALIZADOR DE TEXTOo</title>
+  <title>ANALIZADOR DE TEXTO</title>
   <link rel="stylesheet" href="style.css" />
 </head> 
 <body>
@@ -12,17 +12,22 @@
   </header>
   <main>
     <ul>
-      <li class="metrica">Palabras:
+      <li class="metrica">Palabras: 0
       </li>
-      <li class="metrica">Caracteres:
+
+      <li class="metrica">Caracteres: 0
       </li>
-     <li class="metrica">Caracteres sin espacios: 
+
+      <li class="metrica">Caracteres sin espacios: 0
       </li>
-      <li class="metrica">Números:
+
+      <li class="metrica">Números: 0
       </li>
-      <li class="metrica">Suma Números:
+
+      <li class="metrica">Suma Números: 0
       </li>
-      <li class="metrica">Longitud media:
+
+      <li class="metrica">Longitud media: 0
       </li>
     </ul>
     <textarea name="user-input"></textarea>
