Correcciones en funciones recuento y suma de numeros

--- a/src/index.html
+++ b/src/index.html
@@ -5,29 +5,29 @@
   <meta charset="utf-8">
   <title>ANALIZADOR DE TEXTO</title>
   <link rel="stylesheet" href="style.css" />
-</head> 
+</head>   
 <body>
   <header>
     <h1>Analizador de texto</h1>
   </header>
   <main>
     <ul>
-      <li class="metrica">Palabras: 0
+      <li data-testid = "word-count" class="metrica">Palabras: 0
       </li>
 
-      <li class="metrica">Caracteres: 0 
+      <li data-testid = "character-count" class="metrica">Caracteres: 0 
       </li>
 
-      <li class="metrica">Caracteres sin espacios: 0
+      <li data-testid = "character-no-spaces-count" class="metrica">Caracteres sin espacios: 0
       </li>
 
-      <li class="metrica">Números: 0
+      <li data-testid = "number-count" class="metrica">Números: 0
       </li>
 
-      <li class="metrica">Suma Números: 0
+      <li data-testid = "number-sum" class="metrica">Suma Números: 0
       </li>
 
-      <li class="metrica">Longitud media: 0
+      <li data-testid = "word-length-average" class="metrica">Longitud media: 0
       </li>
     </ul>
     <textarea name="user-input"></textarea>
